<resources>
    <string name="app_name">Поиск билетов</string>
    <string name="tickets">Авиабилеты</string>
    <string name="hotels">Отели</string>
    <string name="briefly">Короче</string>
    <string name="subscriptions">Подписки</string>
    <string name="profile">Профиль</string>
    <string name="search_for_cheap_tickets">Поиск дешевых\nавиабилетов</string>
    <string name="search_icon">Значок поиска</string>
    <string name="from_moscow">Откуда — Москва</string>
    <string name="to_turkey">Куда — Турция</string>
    <string name="concerts">Музыкально отлететь</string>
    <string name="concert_image">Изображение концерта</string>
    <string name="price_template">%s ₽</string>
    <string name="plane_departure_icon">Значок вылета</string>
    <string name="complex_route">Сложный\nмаршрут</string>
    <string name="wherever">Куда угодно</string>
    <string name="weekend">Выходные</string>
    <string name="hot_tickets">Горячие\nбилеты</string>
    <string name="popular_destination_image">Изображение популярного направления</string>
    <string name="istanbul">Стамбул</string>
    <string name="sochi">Сочи</string>
    <string name="phuket">Пхукет</string>
    <string name="popular_destination">Популярное направление</string>
    <string name="nyi">Мы пока не реализовали этот функционал, но это обязательно случится</string>
    <string name="pull_icon">Значок для оттягивания экрана</string>
    <string name="clear_icon">Значок очистки текстового поля</string>
    <string name="plus_icon">Значок добавления</string>
    <string name="change_direction_icon">Значок изменения направления</string>
    <string name="direct_flights">Прямые рейсы</string>
    <string name="view_all_tickets">Посмотреть все билеты</string>
    <string name="back">обратно</string>
    <string name="economy">эконом</string>
    <string name="filters">фильтры</string>
    <string name="passenger_placeholder">%d, %s</string>
    <string name="airline_logo">Логотип авиакомпании</string>
    <string name="back_arrow">Значок возврата</string>
    <string name="dash">—</string>
    <plurals name="passengers">
        <item quantity="one">%d пассажир</item>
        <item quantity="few">%d пассажира</item>
        <item quantity="other">%d пассажиров</item>
    </plurals>
    <string name="en_route">в пути</string>
    <string name="slash">/</string>
    <string name="no_transfer">без пересадок</string>
    <string name="filter">Фильтр</string>
    <string name="price_graph">График цен</string>
    <string name="please_turn_on_vpn">Пожалуйста, включите VPN!</string>
</resources>
