<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="54dp"
    android:background="@color/black"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tickets_tab_title"
        style="@style/MenuBarButtonInactive"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/tickets"
        app:drawableTopCompat="@drawable/plane" />

    <TextView
        android:id="@+id/hotels_tab_title"
        style="@style/MenuBarButtonInactive"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/hotels"
        app:drawableTopCompat="@drawable/bed" />

    <TextView
        android:id="@+id/pin_tab_title"
        style="@style/MenuBarButtonInactive"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/briefly"
        app:drawableTopCompat="@drawable/pin" />

    <TextView
        android:id="@+id/subscriptions_tab_title"
        style="@style/MenuBarButtonInactive"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/subscriptions"
        app:drawableTopCompat="@drawable/alert" />

    <TextView
        android:id="@+id/profile_tab_title"
        style="@style/MenuBarButtonInactive"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/profile"
        app:drawableTopCompat="@drawable/profile" />

</LinearLayout>