<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.MainFragment">

    <TextView
        android:id="@+id/main_title"
        style="@style/Title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:text="@string/search_for_cheap_tickets"
        android:textColor="@color/grey_7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/search_outer_box"
        android:layout_width="match_parent"
        android:layout_height="122dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/squircle_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_title" />

    <View
        android:id="@+id/search_inner_box"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/squircle_shape"
        android:backgroundTint="@color/grey_4"
        app:layout_constraintBottom_toBottomOf="@+id/search_outer_box"
        app:layout_constraintEnd_toEndOf="@+id/search_outer_box"
        app:layout_constraintStart_toStartOf="@+id/search_outer_box"
        app:layout_constraintTop_toTopOf="@+id/search_outer_box" />

    <ImageView
        android:id="@+id/search_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/search_icon"
        android:src="@drawable/magnifying_glass"
        app:layout_constraintBottom_toBottomOf="@+id/search_inner_box"
        app:layout_constraintStart_toStartOf="@+id/search_inner_box"
        app:layout_constraintTop_toTopOf="@+id/search_inner_box" />

    <View
        android:id="@+id/search_box_separator"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="16dp"
        android:alpha="0.6235"
        android:background="@color/grey_6"
        app:layout_constraintBottom_toBottomOf="@+id/search_inner_box"
        app:layout_constraintEnd_toEndOf="@+id/search_inner_box"
        app:layout_constraintStart_toStartOf="@+id/search_inner_box"
        app:layout_constraintTop_toTopOf="@+id/search_inner_box" />

    <EditText
        android:id="@+id/departure_text_field"
        style="@style/ButtonText1"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:background="@null"
        android:digits="АБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯабвгдеёжзийклмнопрстуфхцчшщъыьэюя"
        android:hint="@string/from_moscow"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/search_box_separator"
        app:layout_constraintEnd_toEndOf="@+id/search_box_separator"
        app:layout_constraintStart_toStartOf="@+id/search_box_separator"
        app:layout_constraintTop_toTopOf="@+id/search_inner_box"
        tools:text="Минск" />

    <EditText
        android:id="@+id/destination_text_field"
        style="@style/ButtonText1"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:background="@null"
        android:digits="АБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯабвгдеёжзийклмнопрстуфхцчшщъыьэюя"
        android:hint="@string/to_turkey"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/search_inner_box"
        app:layout_constraintEnd_toEndOf="@+id/search_box_separator"
        app:layout_constraintStart_toStartOf="@+id/search_box_separator"
        app:layout_constraintTop_toBottomOf="@+id/search_box_separator" />

    <TextView
        android:id="@+id/concerts_title"
        style="@style/Title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/concerts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_outer_box" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/concerts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:clipToPadding="false"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/concerts_title"
        tools:listitem="@layout/item_concert" />

</androidx.constraintlayout.widget.ConstraintLayout>