<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="16dp">

    <View
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:background="@color/grey_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/back_arrow"
        app:layout_constraintBottom_toBottomOf="@+id/header"
        app:layout_constraintStart_toStartOf="@+id/header"
        app:layout_constraintTop_toTopOf="@+id/header"
        app:srcCompat="@drawable/back_arrow_blue" />

    <TextView
        android:id="@+id/from_to"
        style="@style/Title3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="@+id/header"
        app:layout_constraintStart_toEndOf="@+id/back_arrow"
        app:layout_constraintTop_toTopOf="@+id/header"
        tools:text="Москва — Сочи" />

    <TextView
        android:id="@+id/parameters"
        style="@style/Title4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/grey_6"
        app:layout_constraintEnd_toEndOf="@+id/from_to"
        app:layout_constraintStart_toEndOf="@+id/back_arrow"
        app:layout_constraintStart_toStartOf="@+id/from_to"
        app:layout_constraintTop_toBottomOf="@+id/from_to"
        tools:text="23 февраля, 1 пассажир" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tickets"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:clipToPadding="false"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        tools:listitem="@layout/item_ticket" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rectangle_shape"
        android:backgroundTint="@color/blue"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/filter"
            style="@style/Title4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:drawableStart="@drawable/filter_large"
            android:text="@string/filter" />

        <TextView
            android:id="@+id/textView4"
            style="@style/Title4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/graph"
            android:text="@string/price_graph" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>